data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_480.wast
;; 1. **Test Br If Condition**: A loop that continuously executes with a `br_if` that should exit the loop when a condition on a value from the stack is met but the value is never pushed correctly due to condition evaluation issues. Test to ensure the loop terminates correctly when expected.

(assert_invalid
  (module
    (func (result i32)
      (i32.const 0) 
      (loop (result i32)
        (br_if 1 (i32.const 1))
        (i32.const 42)
      )
    )
  )
  "type mismatch"
)